# Personacle

./: .gitignore  README.md  THIRD_PARTY_LICENSES.md  design-notes.md  index.html  package-lock.json  package.json  plan.md  spec-notes.md  vite.config.ts
.github/workflows/: release.yml
docs/: design.md  licensing.md  release-notes-v0.1.0.md  release-notes-v0.2.0.md  requirements.md
src/: api.ts  main.ts  styles.css  types.ts  ui.ts
src-tauri/: Cargo.toml  about.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  context.rs  conversation.rs  db.rs  error.rs  export.rs  inference.rs  integration_test.rs  lib.rs  main.rs  memory.rs  models.rs  personality.rs  poc_test.rs  prompt.rs  test_util.rs  worker.rs
src/views/: autonomous.ts  charts.ts  chat.ts  dashboard.ts  diary.ts  graph.ts  group.ts  memories.ts  personaForm.ts  personality.ts  sessions.ts  settings.ts
